// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current account actions setCurrentSubscription() should return a Redux action to set the current subscription. 1`] = `
Object {
  "subscription": Immutable.Map {
    "plan": "basic-usd-1",
    "status": "active",
  },
  "type": "SET_CURRENT_SUBSCRIPTION",
}
`;

exports[`current account actions submit setting creation 1`] = `
Array [
  Object {
    "isUpdate": false,
    "setting": Object {
      "hello": "world",
    },
    "type": "UPDATE_ACCOUNT_SETTING",
  },
]
`;

exports[`current account actions submit setting update 1`] = `
Array [
  Object {
    "isUpdate": true,
    "setting": Object {
      "hello": "world",
      "id": 1,
    },
    "type": "UPDATE_ACCOUNT_SETTING",
  },
]
`;

exports[`current account actions submitSettingSuccess should dispatch the next setting 1`] = `
Array [
  Object {
    "isUpdate": false,
    "setting": Object {
      "data": Object {
        "view_sections": Object {},
        "views": Object {
          "1": Object {
            "display_order": 2,
          },
        },
      },
      "id": 1,
      "type": "views-ordering",
    },
    "type": "UPDATE_ACCOUNT_SETTING",
  },
]
`;

exports[`current account actions update account 1`] = `
Array [
  Object {
    "type": "UPDATE_ACCOUNT_START",
  },
  Object {
    "resp": Object {
      "id": 2,
    },
    "type": "UPDATE_ACCOUNT_SUCCESS",
  },
]
`;

exports[`current account actions update account owner update account owner 1`] = `
Array [
  Object {
    "type": "UPDATE_ACCOUNT_OWNER_SUCCESS",
    "userId": 1,
  },
]
`;

exports[`current account actions update subscription update subscription 1`] = `
Array [
  Object {
    "subscription": Object {
      "plan": "basic",
    },
    "type": "UPDATE_SUBSCRIPTION_SUCCESS",
  },
]
`;
